--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/heropagestyle.css">
-	<title></title>
+	<title>The Almighty Index Page</title>
 </head>
 <body>
 	<section class="hero">
