--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/heropagestyle.css">
+	<link rel="stylesheet" type="text/css" href="css/indexstyle.css">
 	<title>The Almighty Index Page</title>
 </head>
 <body>
